--- a/resources/sass/_flex.scss
+++ b/resources/sass/_flex.scss
@@ -31,6 +31,9 @@
 	align-items: baseline;
 }
 
+.m-0{
+	margin: 0rem;
+}
 .m-1{
 	margin: 0.3rem;
 }
@@ -47,6 +50,9 @@
 	margin: 2rem;
 }
 
+.ml-0{
+	margin-left: 0rem;
+}
 .ml-1{
 	margin-left: 0.3rem;
 }
@@ -63,6 +69,9 @@
 	margin-left: 2rem;
 }
 
+.mr-0{
+	margin-right: 0rem;
+}
 .mr-1{
 	margin-right: 0.3rem;
 }
@@ -79,6 +88,9 @@
 	margin-right: 2rem;
 }
 
+.mb-0{
+	margin-bottom: 0rem;
+}
 .mb-1{
 	margin-bottom: 0.3rem;
 }
@@ -95,6 +107,9 @@
 	margin-bottom: 2rem;
 }
 
+.mt-0{
+	margin-top: 0rem;
+}
 .mt-1{
 	margin-top: 0.3rem;
 }
