added vuex statement management to workshop

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -854,6 +854,17 @@ button {
   padding: 1rem;
 }
 
+.fade-enter-active,
+.fade-leave-active {
+  -webkit-transition: opacity .5s;
+  transition: opacity .5s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
 html {
   font-family: "Vollkorn", sans-serif;
 }
