--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@
 @import 'buttons';
 @import 'cards';
 @import 'flash-messages';
+@import 'animations';
 
 //     ____  _   ______
 //    / __ \/ | / / __ \
