added some settings options

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,23 @@
 @import 'flash-messages';
 @import 'animations';
 
+
+//     ____                 __
+//    / __ \___  ________  / /_
+//   / /_/ / _ \/ ___/ _ \/ __/
+//  / _, _/  __(__  )  __/ /_
+// /_/ |_|\___/____/\___/\__/
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 100%;
+}
+
 //     ____  _   ______
 //    / __ \/ | / / __ \
 //   / / / /  |/ / / / /
