--- a/public/css/workshop.css
+++ b/public/css/workshop.css
@@ -1,1 +1,71 @@
-.workshop-header{position:relative;background-color:#dfe7ed;border:3px solid #9cacb9;padding:1rem;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:start;-ms-flex-pack:start;justify-content:start}.workshop-header .img-container{width:100px;height:100px;margin-right:1rem;background-size:cover!important;border-radius:100%;border:5px solid #fff}.workshop-header .data>:first-child{margin-top:0}.workshop-header .setting-page{position:absolute;right:10px;top:10px;width:35px}.workshop-header .setting-page img{width:100%}.workshop-content{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:start;-ms-flex-align:start;align-items:flex-start;-webkit-box-pack:start;-ms-flex-pack:start;justify-content:flex-start}.workshop-content .teams-container{width:30%;border:5px dotted #9cacb9;padding:1rem;min-height:300px}.workshop-content .playing-table{width:70%;background-color:#dfe7ed;padding:1rem;min-height:300px;border:5px solid transparent}.settings-container .settings-column{padding:1rem;border:5px solid grey;width:33%;min-height:300px}
+.workshop-header {
+  position: relative;
+  background-color: #DFE7ED;
+  border: 3px solid #9CACB9;
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
+.workshop-header .img-container {
+  width: 100px;
+  height: 100px;
+  margin-right: 1rem;
+  background-size: cover !important;
+  border-radius: 100%;
+  border: solid white 5px;
+}
+
+.workshop-header .data > *:first-child {
+  margin-top: 0;
+}
+
+.workshop-header .setting-page {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  width: 35px;
+}
+
+.workshop-header .setting-page img {
+  width: 100%;
+}
+
+.workshop-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.workshop-content .teams-container {
+  width: 30%;
+  border: dotted 5px #9CACB9;
+  padding: 1rem;
+  min-height: 300px;
+}
+
+.workshop-content .playing-table {
+  width: 70%;
+  background-color: #DFE7ED;
+  padding: 1rem;
+  min-height: 300px;
+  border: rgba(0, 0, 0, 0) solid 5px;
+}
+
+.settings-container .settings-column {
+  padding: 1rem;
+  border: solid 5px grey;
+  width: 33%;
+  min-height: 300px;
+}
+
