--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -10,3 +10,21 @@ main{
 	opacity: 0;
 	display: none;
 }
+
+.user-header{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+
+	img{
+		border-radius: 100%;
+		width: 80px;
+		border: grey solid 5px;
+		margin-right: 1rem;
+	}
+	span{
+		font-size: 1.5rem;
+		text-transform: uppercase;
+	}
+}
