--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -42,7 +42,9 @@
 
 	.page-name{
 		display: flex;
+		flex-direction: row;
 		align-items: center;
+		justify-content: flex-end;
 		.card{
 			position: relative;
 			width: 15px;
