--- a/public/css/workshop.css
+++ b/public/css/workshop.css
@@ -69,3 +69,21 @@
   min-height: 300px;
 }
 
+.teams-container .adding-team {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: dotted 5px #9CACB9;
+  color: #9CACB9;
+}
+
+.teams-container .adding-team img {
+  opacity: 0.5;
+}
+
