added delete this team and name input

--- a/resources/sass/workshop.scss
+++ b/resources/sass/workshop.scss
@@ -120,5 +120,14 @@
 .table-header{
 	display: flex;
 	justify-content: space-between;
-	flex-direction: row;
+	flex-direction: column;
+    align-items: stretch;
+
+    .team-header{
+
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+
+    }
 }
