--- a/resources/sass/workshop.scss
+++ b/resources/sass/workshop.scss
@@ -120,14 +120,12 @@
 .table-header{
 	display: flex;
 	justify-content: space-between;
-	flex-direction: column;
-    align-items: stretch;
+	flex-direction: row;
+    align-items: center;
+}
 
-    .team-header{
-
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-
-    }
+.team-header{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
 }
