--- a/resources/sass/workshop.scss
+++ b/resources/sass/workshop.scss
@@ -129,3 +129,9 @@
     justify-content: space-between;
     flex-direction: row;
 }
+
+.team-setting{
+    .v-select{
+        min-width: 300px;
+    }
+}
